# CV_Task_3

./: CMakeLists.txt
include/: UniversalSolver.h  test.h
src/: UniversalSolver.cpp  main.cpp  test.cpp
